--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@nextui-org/switch": "2.0.33",
 		"@nextui-org/system": "2.2.5",
 		"@nextui-org/theme": "2.2.9",
+		"@prisma/client": "^5.19.0",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
 		"class-variance-authority": "^0.7.0",
@@ -30,6 +31,7 @@
 		"lucide-react": "^0.436.0",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
+		"prisma": "^5.19.0",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"tailwind-merge": "^2.5.2",
