--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"@prisma/client": "^5.19.0",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@shadcn/ui": "^0.0.4",
+		"@tanstack/react-table": "^8.20.5",
 		"@vercel/postgres": "^0.9.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
