--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"db:seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.0",
 		"@nextui-org/badge": "^2.0.31",
 		"@nextui-org/button": "2.0.37",
 		"@nextui-org/code": "2.0.32",
@@ -24,6 +25,9 @@
 		"@nextui-org/system": "2.2.5",
 		"@nextui-org/theme": "2.2.9",
 		"@prisma/client": "^5.19.0",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-select": "^2.1.1",
+		"@radix-ui/react-slot": "^1.1.0",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
 		"@shadcn/ui": "^0.0.4",
@@ -31,6 +35,7 @@
 		"@vercel/postgres": "^0.9.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"easymde": "^2.18.0",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"lucide-react": "^0.436.0",
@@ -39,6 +44,8 @@
 		"prisma": "^5.19.0",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
+		"react-hook-form": "^7.53.0",
+		"react-simplemde-editor": "^5.2.0",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8"
