--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@shadcn/ui": "^0.0.4",
 		"@tanstack/react-table": "^8.20.5",
 		"@vercel/postgres": "^0.9.0",
+		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"easymde": "^2.18.0",
