updated by adding a card to the ticket details, also added markdown capabilities in the description field

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@hookform/resolvers": "^3.9.0",
 		"@nextui-org/badge": "^2.0.31",
 		"@nextui-org/button": "2.0.37",
+		"@nextui-org/card": "^2.0.33",
 		"@nextui-org/code": "2.0.32",
 		"@nextui-org/input": "2.2.4",
 		"@nextui-org/kbd": "2.0.33",
@@ -46,6 +47,7 @@
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-hook-form": "^7.53.0",
+		"react-markdown": "^9.0.1",
 		"react-simplemde-editor": "^5.2.0",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
