--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-select": "^2.1.1",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-toast": "^1.2.1",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
 		"@shadcn/ui": "^0.0.4",
 		"@tanstack/react-table": "^8.20.5",
 		"@vercel/postgres": "^0.9.0",
 		"axios": "^1.7.7",
+		"bcrypt": "^5.1.1",
+		"bcryptjs": "^2.4.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"easymde": "^2.18.0",
@@ -42,7 +45,9 @@
 		"intl-messageformat": "^10.5.0",
 		"lucide-react": "^0.436.0",
 		"next": "14.2.4",
+		"next-auth": "^4.24.7",
 		"next-themes": "^0.2.1",
+		"node-mocks-http": "^1.15.1",
 		"prisma": "^5.19.0",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
@@ -54,6 +59,11 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^6.5.0",
+		"@testing-library/react": "^16.0.1",
+		"@types/bcrypt": "^5.0.2",
+		"@types/bcryptjs": "^2.4.6",
+		"@types/jest": "^29.5.12",
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
@@ -70,6 +80,8 @@
 		"eslint-plugin-react": "^7.23.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-unused-imports": "^3.2.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"postcss": "8.4.38",
 		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.3",
